objects/ASI_MFM_Prepayment_Change_Request_Att__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Download_URL__c</fullName>
        <formula>HYPERLINK(&apos;/sfc/servlet.shepherd/version/download/&apos; + ASI_MFM_File_Id__c, &apos;Download&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Download URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Feed_Item_Id__c</fullName>
        <label>Feed Item Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_File_Extension__c</fullName>
        <label>File Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_File_Id__c</fullName>
        <label>File Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_File_Size__c</fullName>
        <label>File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Prepayment_Change_Request__c</fullName>
        <label>Prepayment Change Request</label>
        <referenceTo>ASI_MFM_Prepayment_Proposal_Change_Log__c</referenceTo>
        <relationshipLabel>Prepayment Change Request Attachments</relationshipLabel>
        <relationshipName>Prepayment_Change_Request_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Prepayment Change Request Attachment</label>
    <nameField>
        <displayFormat>Att-{YY}{MM}{0000}</displayFormat>
        <label>Attachment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prepayment Change Request Attachments</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_KR_Prepayment_Request_Attachment</fullName>
        <active>true</active>
        <label>KR Prepayment Request Attachment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>